--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,12 @@
 title: Veronicodes Blog
-theme: minima
+theme: jekyll-theme-tactile
 plugins:
   - jekyll-feed
 markdown: kramdown
+
+kramdown:
+  input: GFM
+  hard_wrap: true
+
+sass:
+  sass_dir: assets/css
